--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -6,3 +6,7 @@ nav_enabled: false
 <h2>Test</h2>
 
 {{ content }}
+
+{%- if site.footer_content -%}
+<p class="text-small text-grey-dk-100 mb-0">{{ site.footer_content }}</p>
+{%- endif -%}
