--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -10,3 +10,5 @@ nav_enabled: false
 {%- if site.footer_content -%}
 <p class="text-small text-grey-dk-100 mb-0">{{ site.footer_content }}</p>
 {%- endif -%}
+
+_includes/footer.html
