--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -11,4 +11,4 @@ nav_enabled: false
 <p class="text-small text-grey-dk-100 mb-0">{{ site.footer_content }}</p>
 {%- endif -%}
 
-_includes/footer.html
+{{ _includes/footer.html }}
