--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -3,9 +3,14 @@ layout: minimal
 nav_enabled: false
 ---
 
+{%- comment -%}
+{%- endcomment -%}
+
+
 <h2>Test</h2>
 
-{{ _includes/breadcrumbs.html }}
+{{ _includes/sidebar.html }}
+
 
 {{ content }}
 
