--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -10,8 +10,9 @@ nav_enabled: false
 {%- comment -%}
 {%- endcomment -%}
 
-1. {%- include components/sidebar.html -%}
-2. {{ _includes/components/sidebar.html }}
+{%- include components/sidebar.html -%}
+
+
 
 {{ content }}
 
