--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -15,8 +15,8 @@ nav_enabled: false
 
     {{ content }}
 
-    {%- include footer.html -%}
-    {%- include mermaid.html -%}
+    {%- include components/footer.html -%}
+    {%- include components/mermaid.html -%}
 
 </body>
 
