--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -8,6 +8,7 @@ nav_enabled: false
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{{ page.title | default: site.title }}</title>
 </head>
 
 <body>
