--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -12,6 +12,11 @@ nav_enabled: false
 </head>
 
 <body>
+
+
+    {{ collection_value.name }}
+
+
     {%- include components/sidebar.html -%}
 
     {{ content }}
