--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -14,7 +14,9 @@ nav_enabled: false
 <body>
 
 
-    {{ collection_value.name }}
+    {{ page.collection.label }}
+
+
 
 
     {%- include components/sidebar.html -%}
