--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -8,13 +8,14 @@ nav_enabled: false
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ page.title | default: site.title }}</title>
+    <title>{% if page.url == "/" %}{{ site.title }}{% elsif page.collection %}{{ page.collection | capitalize }}: {{
+        page.title }} | {{ site.title }}{% else %}{{ page.title | default: site.title }} | {{ site.title }}{% endif %}
+    </title>
 </head>
 
 <body>
 
 
-    {{ page.collection }}
 
 
 
