--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -9,6 +9,7 @@ nav_enabled: false
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {%- include components/window_title.html -%}
+    {%- include components/favicon.html -%}
 </head>
 
 <body>
