--- a/_includes/components/window_title.html
+++ b/_includes/components/window_title.html
@@ -1,9 +1,3 @@
-<title>
-    {% if page.url == "/" %}
-    {{ site.title }}
-    {% elsif page.collection %}
-    {{ page.collection | upcase }}: {{ page.title | capitalize }} | {{ site.title }}
-    {% else %}
-    {{ page.title | capitalize | default: site.title }} | {{ site.title }}
-    {% endif %}
-</title>
+<title>{% if page.url == "/" %}{{ site.title }}{% elsif page.collection %}{{ page.collection | upcase }}: {{ page.title
+    | capitalize }} | {{ site.title }}{% else %}{{ page.title | capitalize | default: site.title }} | {{ site.title }}{%
+    endif %}</title>
