--- a/_includes/components/favicon.html
+++ b/_includes/components/favicon.html
@@ -1,4 +1,6 @@
+{% for file in site.static_files %}
 {% if file.path == site.favicon_ico or file.path == '/favicon.ico' %}
 {% assign favicon = true %}
-<link rel="icon" href="{{ site.favicon_ico | default: '/favicon.ico' | relative_url }}" type="image/x-icon">
+<link rel="icon" href="{{ site.favicon_ico | default: '/favicon.ico'}}" type="image/x-icon">
 {% endif %}
+{% endfor %}
