--- a/_includes/components/favicon.html
+++ b/_includes/components/favicon.html
@@ -1,4 +1,1 @@
-{% assign favicon_path = site.favicon_ico | default: '/favicon.ico' %}
-{% for file in site.static_files %}{% if file.path == favicon_path %}
-<link rel="icon" href="{{ favicon_path }}" type="image/x-icon">
-{% break %}{% endif %}{% endfor %}
+<link rel="icon" href="{{ site.favicon_ico | relative_url }}" type="image/x-icon">
