--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -8,9 +8,25 @@ nav_enabled: false
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="generator" content="Jekyll">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}Home{% endif %}">
+    <meta name="author" content="{{ site.author }}">
+    <meta property="og:locale" content="{{ site.locale | default: " en_US" }}">
+    <meta name="description"
+        content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
+    <meta property="og:description"
+        content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
+    <meta property="og:url" content="{{ site.url }}{{ page.url }}">
+    <meta property="og:site_name" content="{{ site.title }}">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary">
+    <meta property="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}Home{% endif %}">
     {%- include components/window_title.html -%}
     <link rel="icon" href="{{ site.favicon_ico | relative_url }}" type="image/x-icon">
-    <meta name="generator" content="Jekyll {{ site.jekyll_version }}">
+    <link rel="canonical" href="{{ site.url }}{{ page.url }}">
+
+
 </head>
 
 <body>
