--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -2,7 +2,7 @@
 nav_enabled: false
 ---
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="{{ site.locale | default: " en_US" }}">
 
 <head>
     <meta charset="UTF-8">
