--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -23,7 +23,7 @@ nav_enabled: false
     <title>{%- include components/title.html -%}</title>
     <link rel="icon" href="{{ site.favicon_ico | relative_url }}" type="image/x-icon">
     <link rel="canonical" href="{{ site.url }}{{ page.url }}">
-    <link rel="stylesheet" href="{%- include css/style.css -%}">
+    <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
     <style id="jtd-head-nav-stylesheet">
         .site-nav ul li a {
             background-image: linear-gradient(-90deg, rgb(234.8, 236.82, 244.9) 0%, rgba(234.8, 236.82, 244.9, 0.8) 80%, rgba(234.8, 236.82, 244.9, 0) 100%);
