--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -166,13 +166,26 @@ nav_enabled: false
     <div class="main" id="top">
         <div id="main-header" class="main-header">
         </div>
+
+        <div id="main-header" class="main-header">
+            {% if site.search_enabled != false %}
+            {% include components/search_header.html %}
+            {% else %}
+            <div></div>
+            {% endif %}
+            {% include header_custom.html %}
+            {% if site.aux_links %}
+            {% include components/aux_nav.html %}
+            {% endif %}
+        </div>
+
         <div class="main-content-wrap">
             {{ content }}
+            {%- include components/footer.html -%}
         </div>
         <div class="search-overlay">
         </div>
     </div>
-    {%- include components/footer.html -%}
     {%- include components/mermaid.html -%}
 </body>
 
