--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -158,15 +158,10 @@ nav_enabled: false
             </svg>
         </symbol>
     </svg>
-
     <div class="side-bar">
         {%- include components/sidebar.html -%}
     </div>
-
     <div class="main" id="top">
-        <div id="main-header" class="main-header">
-        </div>
-
         <div id="main-header" class="main-header">
             {% if site.search_enabled != false %}
             {% include components/search_header.html %}
@@ -178,10 +173,13 @@ nav_enabled: false
             {% include components/aux_nav.html %}
             {% endif %}
         </div>
-
         <div class="main-content-wrap">
-            {{ content }}
-            {%- include components/footer.html -%}
+            <div id="main-content" class="main-content">
+                <main>
+                    {{ content }}
+                </main>
+                {%- include components/footer.html -%}
+            </div>
         </div>
         <div class="search-overlay">
         </div>
