--- a/_includes/components/sidebar.html
+++ b/_includes/components/sidebar.html
@@ -1,6 +1,6 @@
 <div class="side-bar">
   <div class="site-header" role="banner">
-    <a href="{{ '/' | relative_url }}" class="site-title lh-tight fs-6">
+    <a href="{{ '/' | relative_url }}" class="site-title lh-tight">
       <img src="{{ site.favicon_ico | relative_url }}" alt="logo"> {{site.title}}
     </a>
     <button id="menu-button" class="site-button btn-reset" aria-label="Toggle menu" aria-pressed="false">
