--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -898,12 +898,12 @@ blockquote {
 }
 
 .site-title {
-    font-size: 1rem !important;
+    font-size: .75rem !important;
 }
 
 @media (min-width: 31.25rem) {
     .site-title {
-        font-size: 1.125rem !important;
+        font-size: 1rem !important;
         line-height: 1.25;
     }
 }
