--- a/_includes/components/sidebar.html
+++ b/_includes/components/sidebar.html
@@ -1,7 +1,7 @@
 <div class="side-bar">
   <div class="site-header" role="banner">
-    <a href="{{ '/' | relative_url }}" class="">
-      <!-- site-title lh-tight -->
+    <a href="{{ '/' | relative_url }}" class="lh-tight">
+      <!-- site-title  -->
       <img src="{{ site.favicon_ico | relative_url }}" alt="logo"> {{site.title}}
     </a>
     <button id="menu-button" class="site-button btn-reset" aria-label="Toggle menu" aria-pressed="false">
