--- a/_includes/components/sidebar.html
+++ b/_includes/components/sidebar.html
@@ -1,6 +1,6 @@
 <div class="side-bar">
   <div class="site-header" role="banner">
-    <a href="{{ '/' | relative_url }}" class="lh-tight .fs-6">
+    <a href="{{ '/' | relative_url }}" class="lh-tight fs-6 text-grey-dk-200">
       <!-- site-title  -->
       <img src="{{ site.favicon_ico | relative_url }}" alt="logo"> {{site.title}}
     </a>
