--- a/_includes/components/sidebar.html
+++ b/_includes/components/sidebar.html
@@ -2,7 +2,7 @@
   <div class="site-header" role="banner">
     <a href="{{ '/' | relative_url }}" class="lh-tight fs-5 text-grey-dk-200">
       <!-- site-title  -->
-      <img src="{{ site.favicon_ico | relative_url }}" alt="logo"> {{site.title}}
+      <img src="{{ site.favicon_ico | relative_url }}" alt="logo"> <span class="custom-logo">{{site.title}}</span>
     </a>
     <button id="menu-button" class="site-button btn-reset" aria-label="Toggle menu" aria-pressed="false">
       <svg viewBox="0 0 24 24" class="icon" aria-hidden="true">
