--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -522,7 +522,7 @@ p {
 }
 
 a {
-    color: #7253ed;
+    color: #ff7747;
     text-decoration: none;
 }
 
@@ -585,7 +585,7 @@ blockquote {
         position: fixed;
         width: 15.5rem;
         height: 100%;
-/*
+        /*
         border-right: 1px solid #eeebee;
 */
 
@@ -1184,14 +1184,8 @@ body {
 
 .nav-list .nav-list-item .nav-list-link:hover,
 .nav-list .nav-list-item .nav-list-link.active {
-
-/*
-    background-image: linear-gradient(-90deg, rgb(234.8, 236.82, 244.9) 0%, rgba(234.8, 236.82, 244.9, 0.8) 80%, rgba(234.8, 236.82, 244.9, 0) 100%);
-*/
-
-background: #e3f0df;
-
-
+    background: #e3f0df;
+    color: #0d070f;
 }
 
 .nav-list .nav-list-item .nav-list-expander {
