--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -533,7 +533,7 @@ a:not([class]) {
 }
 
 a:not([class]):hover {
-/*    text-decoration-color: rgba(114, 83, 237, 0.45);*/
+    /*    text-decoration-color: rgba(114, 83, 237, 0.45);*/
     text-decoration-color: #FF7747;
 }
 
@@ -794,7 +794,17 @@ blockquote {
 }
 
 .site-button:hover {
+
+    /*
     background-image: linear-gradient(-90deg, rgb(234.8, 236.82, 244.9) 0%, rgba(234.8, 236.82, 244.9, 0.8) 100%);
+    */
+
+    background: #FF7747;
+    color: #0d070f;
+
+
+
+
 }
 
 body {
@@ -1948,8 +1958,8 @@ h6,
     width: 1rem;
     height: 1rem;
     margin-right: 0.5rem;
-/*    color: #7253ed;*/
-     color: #ff7747;
+    /*    color: #7253ed;*/
+    color: #ff7747;
     flex-shrink: 0;
 }
 
