--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -799,7 +799,7 @@ blockquote {
     background-image: linear-gradient(-90deg, rgb(234.8, 236.82, 244.9) 0%, rgba(234.8, 236.82, 244.9, 0.8) 100%);
     */
 
-    background: #FF7747;
+    background: #e3f0df;
     color: #0d070f;
 
 
