--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1196,7 +1196,7 @@ body {
 
 .nav-list .nav-list-item .nav-list-link:hover,
 .nav-list .nav-list-item .nav-list-link.active {
-    background: #f2f8f0;
+    background: #e3f0df;
 }
 
 .nav-list .nav-list-item .nav-list-expander {
@@ -1205,7 +1205,9 @@ body {
     width: 3rem;
     height: 3rem;
     padding: 0.75rem;
+    /*
     color: #e3f0df;
+    */
 }
 
 @media (min-width: 50rem) {
