--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 
 .custom-logo {
     padding-left: 1.75rem !important;
+    color: #0d070f;
 }
 
 .highlight,
@@ -802,7 +803,7 @@ blockquote {
     background-image: linear-gradient(-90deg, rgb(234.8, 236.82, 244.9) 0%, rgba(234.8, 236.82, 244.9, 0.8) 100%);
     */
 
-    background: #e3f0df;
+    background: #f2f8f0;
     color: #0d070f;
 
 
