--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2391,7 +2391,7 @@ pre.highlight {
 
     background: #edf3eb;
     border: 2px solid #e3f0df;
-    border-radius: .5vh;
+    border-radius: 1.1vh;
 }
 
 .highlight pre {
