--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -622,7 +622,7 @@ blockquote {
 
 .side-bar+.main .main-header {
     display: none;
-    background-color: #f5f6fa;
+    background-color: #edf3eb;
 }
 
 @media (min-width: 50rem) {
@@ -2207,7 +2207,7 @@ thead th {
 :not(pre, figure)>code {
     padding: 0.2em 0.15em;
     font-weight: 400;
-    background-color: #f5f6fa;
+    background-color: #edf3eb;
     border: 1px solid #eeebee;
     border-radius: 4px;
 }
@@ -2221,7 +2221,7 @@ div.listingblock>div.content,
 figure.highlight {
     margin-top: 0;
     margin-bottom: 0.75rem;
-    background-color: #f5f6fa;
+    background-color: #edf3eb;
     border-radius: 4px;
     box-shadow: none;
     -webkit-overflow-scrolling: touch;
@@ -2237,8 +2237,8 @@ figure.highlight>button {
     position: absolute;
     top: 0;
     right: 0;
-    border: 0.75rem solid #f5f6fa;
-    background-color: #f5f6fa;
+    border: 0.75rem solid #edf3eb;
+    background-color: #edf3eb;
     color: #5c5962;
     box-sizing: content-box;
 }
@@ -2322,7 +2322,7 @@ figure.highlight :not(pre)>code {
 .highlight .table-wrapper pre {
     min-width: 0;
     padding: 0;
-    background-color: #f5f6fa;
+    background-color: #edf3eb;
     border: 0;
 }
 
@@ -2385,7 +2385,7 @@ code.language-mermaid {
 .highlight,
 pre.highlight {
     /*
-    background: #f5f6fa;
+    background: #edf3eb;
 */
     color: #5c5962;
 
@@ -2395,7 +2395,7 @@ pre.highlight {
 }
 
 .highlight pre {
-    /*    background: #f5f6fa;*/
+    /*    background: #edf3eb;*/
 }
 
 .text-grey-dk-000 {
