--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2262,7 +2262,7 @@ figure.highlight>button {
 div.highlighter-rouge>button svg,
 div.listingblock>div.content>button svg,
 figure.highlight>button svg {
-    fill: #5c5962;
+    fill: #0d070f;
 }
 
 div.highlighter-rouge>button:active,
