--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -801,6 +801,7 @@ blockquote {
     height: 100%;
     padding: 1rem;
     align-items: center;
+    font-weight: 600;
 }
 
 @media (min-width: 50rem) {
