--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ pre.highlight {
 
     color: #383942;
 
-    padding: .75rem .5rem;
+    padding: .5rem .8rem;
 
 }
 
@@ -2222,11 +2222,12 @@ thead th {
 }
 
 :not(pre, figure)>code {
-    padding: 0.2em 0.15em;
-    font-weight: 400;
+    padding: 0.2em .6em;
     background-color: #edf3eb;
     border: 1px solid #eeebee;
     border-radius: 4px;
+    font-weight: 800;
+    color: #0d070f;
 }
 
 a:visited code {
