--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,10 +11,12 @@
     color: #0d070f;
     display: inline-flex;
     align-items: center;
+    font-weight: 500;
 }
 
 .custom-logo img {
     vertical-align: middle;
+    margin-right: 10px;
 }
 
 
