--- a/_includes/components/sidebar.html
+++ b/_includes/components/sidebar.html
@@ -8,6 +8,9 @@
         <use xlink:href="#svg-menu"></use>
       </svg>
     </button>
+    <p>{{site.description}}</p>
+
+
   </div>
   {% include_cached components/site_nav.html %}
   {% capture nav_footer_custom %}
