--- a/_includes/components/sidebar.html
+++ b/_includes/components/sidebar.html
@@ -10,7 +10,7 @@
     </button>
   </div>
 
-  <p class="custom-slogan">by {{site.author}}</p>
+  <p class="custom-slogan">{{site.description}}</p>
 
   {% include_cached components/site_nav.html %}
   {% capture nav_footer_custom %}
