--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@
 
 .custom-slogan {
     font-size: .75rem;
-    color: #e3f0df;
+    color: #b3c0af;
 
 }
 
@@ -2265,7 +2265,7 @@ figure.highlight {
     border-radius: 4px;
     */
     border: 2px solid #e3f0df;
-    border-radius: 14vh;
+    border-radius: 3vh;
     /*lfp*/
 
 }
