--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2231,7 +2231,7 @@ figure.highlight {
     border-radius: 4px;
     */
     border: 2px solid #e3f0df;
-    border-radius: 2vh;
+    /*    border-radius: 2vh;*/
     /*lfp*/
 
 }
@@ -2397,8 +2397,8 @@ lfp
     color: #5c5962;
 
     background: #edf3eb;
-    border: 2px solid #e3f0df;
-    border-radius: 1.1vh;
+    /*    border: 2px solid #e3f0df;*/
+    /*    border-radius: 1.1vh;*/
 }
 
 .highlight pre {
