--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2395,9 +2395,8 @@ pre.highlight {
 lfp
 */
     color: #5c5962;
-
     background: #edf3eb;
-    /*    border: 2px solid #e3f0df;*/
+    border: 2px solid #e3f0df;
     /*    border-radius: 1.1vh;*/
 }
 
