--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2240,7 +2240,7 @@ figure.highlight>button {
     right: 0;
     border: 0.75rem solid #edf3eb;
     background-color: #edf3eb;
-    color: #5c5962;
+    color: #FF7747;
     box-sizing: content-box;
 }
 
