--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -803,7 +803,7 @@ blockquote {
 }
 
 .site-title:hover {
-    background-image: linear-gradient(-90deg, rgb(234.8, 236.82, 244.9) 0%, rgba(234.8, 236.82, 244.9, 0.8) 80%, rgba(234.8, 236.82, 244.9, 0) 100%);
+    background: #e3f0df;
 }
 
 .site-button:hover {
