--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -178,6 +178,11 @@ nav_enabled: false
                 <main>
                     {{ content }}
                 </main>
+
+                <script src="https://utteranc.es/client.js" theme="github-light" issue-term="title"
+                    repo="lucianofedericopereira/comments" crossorigin="anonymous" async>
+                    </script>
+
                 {%- include components/footer.html -%}
             </div>
         </div>
