--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -83,6 +83,8 @@ nav_enabled: false
 </head>
 
 <body>
+    <div id="translate"></div>
+
     <a class="skip-to-main" href="#main-content">Skip to main content</a>
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
         <symbol id="svg-link" viewBox="0 0 24 24">
@@ -172,6 +174,24 @@ nav_enabled: false
             {% if site.aux_links %}
             {% include components/aux_nav.html %}
             {% endif %}
+            <div class="dropdown">
+                <button class="dropbtn">Language</button>
+                <div class="dropdown-lang">
+                    <a href="#" class="lang-select" data-lang="en">English</a>
+                    <a href="#" class="lang-select" data-lang="es">Spanish</a>
+                    <a href="#" class="lang-select" data-lang="it">Italian</a>
+                    <a href="#" class="lang-select" data-lang="de">German</a>
+                    <a href="#" class="lang-select" data-lang="pt">Portuguese</a>
+                    <a href="#" class="lang-select" data-lang="fr">French</a>
+                    <a href="#" class="lang-select" data-lang="ru">Russian</a>
+                    <a href="#" class="lang-select" data-lang="hr">Croatian</a>
+                    <a href="#" class="lang-select" data-lang="ar">Arabic</a>
+                    <a href="#" class="lang-select" data-lang="iw">Hebrew</a>
+                    <a href="#" class="lang-select" data-lang="zh-CN">Chinese</a>
+                    <a href="#" class="lang-select" data-lang="ja">Japanese</a>
+                    <a href="#" class="lang-select" data-lang="ko">Korean</a>
+                </div>
+            </div>
         </div>
         <div class="main-content-wrap">
             <div id="main-content" class="main-content">
@@ -189,6 +209,114 @@ nav_enabled: false
         <div class="search-overlay">
         </div>
     </div>
+    <script>
+        function debounce(func, wait) {
+            let timeout;
+            return function (...args) {
+                clearTimeout(timeout);
+                timeout = setTimeout(() => func.apply(this, args), wait);
+            };
+        }
+        function translate() {
+            new google.translate.TranslateElement({
+                pageLanguage: 'en',
+                autoDisplay: false,
+                layout: google.translate.TranslateElement.InlineLayout.VERTICAL
+            }, 'translate');
+
+            document.querySelector('.goog-logo-link')?.setAttribute('rel', 'noopener');
+            const googleCombo = document.querySelector("select.goog-te-combo");
+            const langSelect = document.querySelector('.dropdown-lang');
+            const dropdownContainer = document.querySelector('.dropdown');
+            const dropbtn = document.querySelector('.dropbtn'); // Define dropbtn here
+
+            function restoreLang() {
+                const iframe = document.querySelector('.goog-te-banner-frame');
+                if (!iframe) return;
+                const innerDoc = iframe.contentDocument || iframe.contentWindow.document;
+                const restoreButtons = innerDoc.getElementsByTagName("button");
+                Array.from(restoreButtons).forEach(button => {
+                    if (button.id.includes("restore")) {
+                        button.click();
+                        const closeButton = innerDoc.querySelector(".goog-close-link");
+                        closeButton?.click();
+                    }
+                });
+            }
+
+            function triggerHtmlEvent(element, eventName) {
+                const event = document.createEvent
+                    ? new Event(eventName, { bubbles: true, cancelable: true })
+                    : document.createEventObject();
+                document.createEvent
+                    ? element.dispatchEvent(event)
+                    : element.fireEvent('on' + event.eventType, event);
+            }
+
+            const debouncedChangeLanguage = debounce(function (lang) {
+                googleCombo.value = lang;
+                triggerHtmlEvent(googleCombo, 'change');
+            }, 1500);
+
+            langSelect?.addEventListener('click', function (event) {
+                const { target } = event;
+                if (!target) return;
+                document.querySelector('.lang-select.selected')?.classList.remove('selected');
+                const lang = target.getAttribute('data-lang');
+                if (!lang) return;
+                target.classList.add('selected');
+                langSelect.style.display = 'none';
+                dropbtn.disabled = true;
+                dropbtn.classList.add('disabled'); // Add disabled class
+                debouncedChangeLanguage(lang);
+                setTimeout(() => {
+                    dropbtn.disabled = false;
+                    dropbtn.classList.remove('disabled'); // Remove disabled class
+                }, 2000); // 1500ms (debounce time) + 500ms
+                event.preventDefault();
+            });
+
+            const checkSelectedLangInterval = setInterval(function () {
+                const selectedLang = googleCombo.value;
+                if (selectedLang) {
+                    document.querySelector('.lang-select.selected')?.classList.remove('selected');
+                    const initialLang = document.querySelector(`.lang-select[data-lang="${selectedLang}"]`);
+                    if (initialLang) {
+                        document.querySelector('.lang-select.selected')?.classList.remove('selected');
+                        initialLang.classList.add('selected');
+                    }
+                    clearInterval(checkSelectedLangInterval);
+                }
+            }, 100);
+
+            setTimeout(function () {
+                clearInterval(checkSelectedLangInterval);
+            }, 5000);
+
+            dropdownContainer?.addEventListener('mouseover', function () {
+                langSelect.style.display = 'block';
+            });
+
+            dropdownContainer?.addEventListener('mouseout', function () {
+                langSelect.style.display = 'none';
+            });
+
+            dropbtn?.addEventListener('click', function (event) {
+                if (langSelect.style.display === 'block') {
+                    langSelect.style.display = 'none';
+                } else {
+                    langSelect.style.display = 'block';
+                }
+                event.preventDefault();
+            });
+        }
+
+        window.translate = translate;
+
+
+    </script>
+    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=translate"
+        async></script>
     {%- include components/mermaid.html -%}
 </body>
 
