--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -199,9 +199,11 @@ nav_enabled: false
                     {{ content }}
                 </main>
 
-                <script src="https://utteranc.es/client.js" theme="github-light" issue-term="title"
-                    repo="lucianofedericopereira/comments" crossorigin="anonymous" async>
-                    </script>
+                <div class="notranslate">
+                    <script src="https://utteranc.es/client.js" theme="github-light" issue-term="title"
+                        repo="lucianofedericopereira/comments" crossorigin="anonymous" async>
+                        </script>
+                </div>
 
                 {%- include components/footer.html -%}
             </div>
