--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -311,6 +311,10 @@ nav_enabled: false
                 }
                 event.preventDefault();
             });
+
+            _tipon = function () { };
+            _tipoff = function () { };
+
         }
 
         window.translate = translate;
