--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,20 @@ body {
     top: 0px !important;
 }
 
+.goog-tooltip {
+    display: none !important;
+}
+
+.goog-tooltip:hover {
+    display: none !important;
+}
+
+.goog-text-highlight {
+    background-color: transparent !important;
+    border: none !important;
+    box-shadow: none !important;
+}
+
 #google_translate_element,
 .skiptranslate,
 .goog-te-banner-frame.skiptranslate {
