--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -175,7 +175,7 @@ nav_enabled: false
             {% include components/aux_nav.html %}
             {% endif %}
             <div class="dropdown">
-                <button class="dropbtn">Language</button>
+                <button class="site-button dropbtn">Language</button>
                 <div class="dropdown-lang">
                     <a href="#" class="lang-select" data-lang="en">English</a>
                     <a href="#" class="lang-select" data-lang="es">Spanish</a>
