--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@ body {
 }
 
 .dropbtn {
+    /*
     color: #FF7747;
     font-size: 1rem;
     padding: 16px;
@@ -34,6 +35,7 @@ body {
     user-select: none;
     font-weight: 600;
     letter-spacing: 1px;
+*/
     text-transform: capitalize;
 }
 
