--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 
+
 body {
     top: 0px !important;
 }
@@ -25,17 +26,22 @@ body {
 }
 
 .dropbtn {
-    user-select: none;
-    border: none;
+    /*
+    background-color: #4CAF50;
+    color: white;
+*/
     cursor: pointer;
+    /*    min-width: 150px;*/
+    user-select: none;
+    font-weight: 600;
+    letter-spacing: 1px;
     text-transform: capitalize;
-    background: transparent;
-    color: inherit;
-    font: inherit;
-    text-align: inherit;
-    text-decoration: none;
-    outline: none;
-    display: inline;
+    display: flex;
+    height: 100%;
+    padding: 1rem;
+    align-items: center;
+    font-weight: 600;
+
 }
 
 .dropdown {
