--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,13 +83,14 @@ body {
     color: #022000;
 }
 
-.dropdown-lang .selected {
-    background-color: #e3f0df;
+.dropdown-lang .selected,
+.dropdown-lang .selected:hover {
+    background-color: #e3f0df !important;
 }
 
 .dropbtn.disabled {
-    color: #5c5962;
-    background-color: #fff;
+    color: #5c5962 !important;
+    background-color: #fff !important;
     cursor: not-allowed;
 }
 
