--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -224,7 +224,9 @@ nav_enabled: false
         function addCustomCSS() {
             var style = document.createElement('style');
             style.type = 'text/css';
-            style.innerHTML = ` #google_translate_element .goog-te-gadget { background-color: transparent !important; } #google_translate_element .goog-te-gadget:hover { background-color: transparent !important; } #google_translate_element font { background-color: transparent !important; } #google_translate_element font:hover { background-color: transparent !important; } `;
+            style.innerHTML = ` 
+             #google_translate_element .goog-te-gadget { background-color: transparent !important; } #google_translate_element .goog-te-gadget:hover { background-color: transparent !important; } #google_translate_element font, #google_translate_element font font, #google_translate_element font font font { background-color: transparent !important; } #google_translate_element font:hover, #google_translate_element font font:hover, #google_translate_element font font font:hover { background-color: transparent !important; }
+            `;
             document.getElementsByTagName('head')[0].appendChild(style);
         }
 
