--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -220,24 +220,11 @@ nav_enabled: false
             };
         }
 
+
         function disableMouseover() {
-            const translateElements = document.querySelectorAll('#google_translate_element *');
-            translateElements.forEach(element => {
-                element.style.pointerEvents = 'none';
-            });
+            const translateContainer = document.getElementById('translate');
+            translateContainer.addEventListener('mouseover', function (event) { event.stopPropagation(); }, true);
         }
-
-
-
-        function addCustomCSS() {
-            var style = document.createElement('style');
-            style.type = 'text/css';
-            style.innerHTML = ` 
-             #google_translate_element .goog-te-gadget { background-color: transparent !important; } #google_translate_element .goog-te-gadget:hover { background-color: transparent !important; } #google_translate_element font, #google_translate_element font font, #google_translate_element font font font { background-color: transparent !important; } #google_translate_element font:hover, #google_translate_element font font:hover, #google_translate_element font font font:hover { background-color: transparent !important; }
-            `;
-            document.getElementsByTagName('head')[0].appendChild(style);
-        }
-
 
         function translate() {
             new google.translate.TranslateElement({
@@ -336,7 +323,6 @@ nav_enabled: false
             _tipon = function () { };
             _tipoff = function () { };
 
-            addCustomCSS();
             disableMouseover();
 
         }
